deployment/_test.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mutant-test
  labels:
    mutateme: enabled
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sleep
  namespace: mutant-test
  labels:
    app: sleep
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sleep
  template:
    metadata:
      labels:
        app: sleep
    spec:
      containers:
        - name: sleep
          image: tutum/curl
          command: ["/bin/sleep","infinity"]
          imagePullPolicy: IfNotPresent
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: beep
  namespace: mutant-test
  labels:
    app: beep
    product: EDTderivates
spec:
  replicas: 2
  selector:
    matchLabels:
      app: beep
  template:
    metadata:
      labels:
        app: beep
    spec:
      containers:
        - name: beep
          image: tutum/curl
          command: ["/bin/sleep","infinity"]
          imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Pod
metadata:
  name: no-labels
  namespace: mutant-test
spec:
  containers:
    - name: beep
      image: tutum/curl
      command: ["/bin/sleep","infinity"]
      imagePullPolicy: IfNotPresent
