deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mutating-webhook-deployment
  labels:
    app: mutating-webhook
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mutating-webhook
  template:
    metadata:
      labels:
        app: mutating-webhook
    spec:
      containers:
        - name: mutating-webhook
          image: acronhosbx.azurecr.io/mutating-webhook:v1.1
          imagePullPolicy: Always
          volumeMounts:
            - name: webhook-certs
              mountPath: /etc/webhook/certs
              readOnly: true
      volumes:
        - name: webhook-certs
          secret:
            secretName: mutating-webhook-certs
---
apiVersion: v1
kind: Service
metadata:
  name: mutating-webhook-svc
  labels:
    app: mutating-webhook
spec:
  ports:
    - port: 443
      targetPort: 8443
      name: https
  selector:
    app: mutating-webhook
---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: mutating-webhook-cfg
  labels:
    app: mutating-webhook
webhooks:
  - name: mutating-webhook.interview.absa.co.za
    clientConfig:
      service:
        name: mutating-webhook-svc
        namespace: default
        path: "/mutate"
      #
      # run this to get base64 encoded certificate
      # kubectl config view --raw --minify --flatten -o jsonpath='{.clusters[].cluster.certificate-authority-data}'
      #
      caBundle: ${CA_BUNDLE}
    rules:
      - operations: [ "CREATE" ]
        apiGroups: ["apps", ""]
        apiVersions: ["v1"]
        resources: ["deployments","services","pods"]
    namespaceSelector:
      matchLabels:
        mutateme: enabled
