deployment/webhook-system.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mutating-webhook-deployment
  namespace: webhook-system
  labels:
    app: mutating-webhook
  annotations:
    buildVersion: ${buildVersion}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mutating-webhook
  template:
    metadata:
      labels:
        app: mutating-webhook
    spec:
      #pod must be running
      restartPolicy: Always
      containers:
        - name: mutating-webhook
          image: acronhosbx.azurecr.io/mutating-webhook:${tag}
          #imagePullPolicy: Always: the image is pulled every time the pod is started.
          imagePullPolicy: Always
          volumeMounts:
            - name: webhook-certs
              mountPath: /etc/webhook/certs
              readOnly: true
          livenessProbe:
            httpGet:
              path: /health
              port: 8443
              scheme: HTTPS
            initialDelaySeconds: 5
            timeoutSeconds: 5
            periodSeconds: 10
      volumes:
        - name: webhook-certs
          secret:
            secretName: mutating-webhook-certs
---
apiVersion: v1
kind: Service
metadata:
  name: mutating-webhook-svc
  namespace: webhook-system
  labels:
    app: mutating-webhook
spec:
  ports:
    - port: 443
      targetPort: 8443
      name: https
  selector:
    app: mutating-webhook
---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: mutating-webhook-cfg
  namespace: webhook-system
  labels:
    app: mutating-webhook
webhooks:
  - name: mutating-webhook.interview.absa.co.za
    clientConfig:
      service:
        name: mutating-webhook-svc
        namespace: webhook-system
        path: "/mutate-labels"
      caBundle: ${caBundle}
    rules:
      - operations: [ "CREATE" ]
        apiGroups: ["apps", ""]
        apiVersions: ["v1"]
        resources: ["pods"]
    namespaceSelector:
      matchLabels:
        mutateme: enabled
